Adding spring security config