@@ -4,8 +4,6 @@ import com.spring.springsecsection1.model.Contact;
 import com.spring.springsecsection1.repository.ContactRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.access.prepost.PostFilter;
-import org.springframework.security.access.prepost.PreFilter;
-import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
@@ -26,10 +24,10 @@ public class ContactController {
     public List<Contact> saveContactInquiryDetails(@RequestBody List<Contact> contacts) {
         List<Contact> returnContacts = new ArrayList<>();
         if(!contacts.isEmpty()) {
-            Contact contact = contacts.getFirst();
+            Contact contact = contacts.get(0);
             contact.setContactId(getServiceReqNumber());
             contact.setCreateDt(new Date(System.currentTimeMillis()));
-            Contact savedContact =  contactRepository.save(contact);
+            Contact savedContact = contactRepository.save(contact);
             returnContacts.add(savedContact);
         }
         return returnContacts;
